# odoo-operator

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  Dockerfile  Makefile  PLUGIN_ARCHITECTURE.md  README.md  ROADMAP.md  STATE_MACHINE.md  index.yaml  pyproject.toml  release-please-config.json  requirements.txt  watch_20250613-150629
.github/workflows/: build.yml  release-please.yml  release.yml
charts/odoo-operator/: .helmignore  Chart.yaml  README.md  values.yaml
docs/: design-staging-server.md
examples/: gitsync.yaml  odoo-values.yaml  odoo.yaml  postgres-secret.yaml
kube-rs-preview/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  STATE_MACHINE.md
kube-rs-preview/scripts/: backup.sh  restore.sh  s3-download.sh
kube-rs-preview/src/: helpers.rs  lib.rs  main.rs  notify.rs  postgres.rs  webhook.rs
operator/: Makefile
operator/cmd/: main.go
scripts/: backup-package.sh  backup-upload.sh  clone-db.sh  clone-filestore.sh  cron_liveness_probe.py  cron_startup_probe.py  migrate-database.sh  migrate-filestore.sh  neutralize.sh  odoo-download.sh  rename-filestore.sh  restore-load-db.sh  restore.sh  s3-upload.sh
src/: constants.py  error.rs  handlers.py  helpers.rs  lib.rs  main.rs  notify.rs  operator.py  postgres.rs  tls.rs  webhook.rs
testing/: build-test-env.sh  postgres.yaml
tests/: controller_helpers_test.rs  helpers_test.rs  readonly_sql_access_test.rs  ro_env_injection_test.rs  test_conversion.py  test_deployment.py  test_restore_job_handler.py  test_upgrade_job_handler.py  webhook_tls.rs
(+167 files in other folders)
