[project]
name = "odoo-operator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kopf==1.37.4",
    "kubernetes>=1.32.0",
    "psycopg2-binary",
    "pyyaml",
    "passlib",
    "pytz",
    "requests",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-env>=1.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*'crypt' is deprecated.*:DeprecationWarning:passlib.utils",
]
env = [
    "POSTGRES_CLUSTERS_FILE=testing/clusters.yaml",
]
